--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-bottom: 0.5rem;
   font-weight: 700;
   line-height: 1.2;
+  
 }
 
 h1, .h1 {
@@ -114,6 +115,8 @@ h1, .h1 {
 @media (min-width: 1200px) {
   h1, .h1 {
     font-size: 2.5rem;
+    color: #506160;
+    
   }
 }
 
@@ -123,6 +126,7 @@ h2, .h2 {
 @media (min-width: 1200px) {
   h2, .h2 {
     font-size: 2rem;
+    color: #456160;
   }
 }
 
@@ -131,8 +135,15 @@ h3, .h3 {
 }
 @media (min-width: 1200px) {
   h3, .h3 {
-    font-size: 1.75rem;
+    font-size: 2.75rem;
+    color: #b3dad8;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
+}
+.grupo {
+  color: #b3dad8;
+  font-size: 5rem;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 h4, .h4 {
@@ -140,7 +151,7 @@ h4, .h4 {
 }
 @media (min-width: 1200px) {
   h4, .h4 {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
   }
 }
 
@@ -155,6 +166,7 @@ h6, .h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+  font-size: 2rem;
 }
 
 abbr[title],
@@ -7803,7 +7815,7 @@ textarea.form-control-lg {
 
 .bg-primary {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
+  background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-secondary {
@@ -11477,6 +11489,8 @@ footer.footer .social-link:hover {
   font-size: 4rem;
   margin: 0;
   padding: 0;
+  color: #b3dad8;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 @media (min-width: 992px) {
   .masthead {
